Fix -- remove overflow hidden from label container to show error msgs properly

--- a/t-autosuggest.css
+++ b/t-autosuggest.css
@@ -218,9 +218,9 @@
     z-index: 99;
     background: var(--primary-background-color,#fff);
   }
-  .label-container{
+  /* .label-container{
     overflow: hidden;
-  }
+  } */
 @media (max-width: 600px){
   :host.focused{
     position: fixed;
